Use closures for fake layers, split out globals to make lib building easier

--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -111,6 +111,7 @@ endif()
 set (indimain_SRCS
         ${CMAKE_SOURCE_DIR}/indidriver.c
 	${CMAKE_SOURCE_DIR}/indidrivermain.c
+        ${CMAKE_SOURCE_DIR}/indidrivermain_gbls.c
 	${CMAKE_SOURCE_DIR}/eventloop.c
     )
 
