--- a/.travis.yml
+++ b/.travis.yml
@@ -30,22 +30,7 @@ install:
     - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ . ../../libindi/
     - make
     - sudo make install
-    - cd ..
-    - mkdir 3rdparty
-    - cd 3rdparty
-    - bash ../../3rdparty/make_libraries
-    - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ -DWITH_NSE:OPTION=ON . ../../3rdparty/
-    - make 
-    - sudo make install
-    - cd ..
-    - mkdir deb_libindi
-    - cd deb_libindi
-    - cp -r ../../libindi .
-    - cp -r ../../cmake_modules libindi/
-    - cp -r ../../debian/libindi debian
-    - fakeroot debian/rules binary
-    - cd ..
-    - ../3rdparty/make_deb_pkgs
+    - cd test
     
 script:
     - echo Test
