Travis build improvemenst

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,22 @@ sudo: required
 dist: trusty
 os: linux
 
+branches:
+  only:
+    - develop
+    - master
+    - feature/unittest
 
 before_install:
     - echo Install dependencies
-    - sudo apt-get -qq update
-    - sudo apt-get -q -y install libusb-1.0-0-dev libcfitsio3-dev libnova-dev
-    - sudo apt-get -q -y install libgphoto2-dev libgps-dev libjpeg-dev cdbs
-    - sudo apt-get -q -y install libopenal-dev libgsl0-dev libboost-dev
-    - sudo apt-get -q -y install libboost-regex-dev libftdi-dev dcraw fakeroot wget
+    - travis-ci/deps.sh
 
 install:
-    - ./travis-ci.sh 
-    
+    - echo Building INDI Core
+    - travis-ci/build-core.sh 
+    - travis-ci/build-3rdparty.sh
+    - travis-ci/build-deb-packages.sh
+
 script:
     - cd /home/travis/build/A-j-K/indi/build/libindi/test
     - ctest -V
