--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@
 3rdparty/indi-sbig/*.user*
 3rdparty/indi-spectracyber/*.user*
 3rdparty/indi-sx/*.user*
+3rdparty/indi-qhy/*.user*
 3rdparty/indi-tess/*.user*
 3rdparty/libapogee/*.user*
 3rdparty/libfli/*.user*
