Fix travis issue and add probe to discover cwd

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ install:
     - travis-ci/build-deb-packages.sh
 
 script:
-    - cd indi/build/libindi/test
+    - pwd
+    - cd ~
+    - cd /home/travis/build/A-j-K/indi/build/libindi/test
     - ctest -V
 
