--- a/debian/libqhy/control
+++ b/debian/libqhy/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 6), cdbs, cmake, libusb-1.0-0
 Standards-Version: 3.9.1
 
 Package: libqhy
-Architecture: i386 amd64 armhf
+Architecture: i386 amd64 armhf arm64
 Depends: ${shlibs:Depends}, ${misc:Depends}, fxload
 Description: libqhy provide libraries to access and control QHY CCDs and Filter Wheels.
 
