--- a/3rdparty/indi-shelyak/CMakeLists.txt
+++ b/3rdparty/indi-shelyak/CMakeLists.txt
@@ -12,20 +12,21 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INDI_INCLUDE_DIR})
 
-set (SHELYAK_VERSION_MAJOR 1)
-set (SHELYAK_VERSION_MINOR 0)
+set(SHELYAK_ESHEL_VERSION_MAJOR 1)
+set(SHELYAK_ESHEL_VERSION_MINOR 0)
+
+set(SHELYAK_ALPY_VERSION_MAJOR 1)
+set(SHELYAK_ALPY_VERSION_MINOR 0)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_shelyak.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_shelyak.xml )
 
-set(shelyak_SRCS
-  ${CMAKE_CURRENT_SOURCE_DIR}/indi_shelyakeshel_spectrograph.cpp
-)
-
-add_executable(indi_shelyakeshel_spectrograph ${shelyak_SRCS})
-
+add_executable(indi_shelyakeshel_spectrograph ${CMAKE_CURRENT_SOURCE_DIR}/indi_shelyakeshel_spectrograph.cpp)
 target_link_libraries(indi_shelyakeshel_spectrograph ${INDI_DRIVER_LIBRARIES})
-
 install(TARGETS indi_shelyakeshel_spectrograph RUNTIME DESTINATION bin)
+
+add_executable(indi_shelyakalpy_spectrograph ${CMAKE_CURRENT_SOURCE_DIR}/indi_shelyakalpy_spectrograph.cpp)
+target_link_libraries(indi_shelyakalpy_spectrograph ${INDI_DRIVER_LIBRARIES})
+install(TARGETS indi_shelyakalpy_spectrograph RUNTIME DESTINATION bin)
 
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_shelyak.xml DESTINATION ${INDI_DATA_DIR})
