--- a/3rdparty/indi-sbig/CMakeLists.txt
+++ b/3rdparty/indi-sbig/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 2.7)
 PROJECT(indi_sbig CXX C)
 
+set (VERSION_MAJOR 1)
+set (VERSION_MINOR 8)
+
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
