--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -70,7 +70,7 @@ set_package_properties(Nova PROPERTIES DESCRIPTION "A general purpose, double pr
 
 # Build libindi Qt5 (only INDI Client Library for now)
 if (INDI_BUILD_QT5)
-    set(HAVE_QT5 1)
+    add_definitions(-DHAVE_QT5)
     find_package(Qt5Core REQUIRED)
     find_package(Qt5Network REQUIRED)
     set(M_LIB "")
