Do not link indidriver with Qt5

--- a/libindi/CMakeLists.txt
+++ b/libindi/CMakeLists.txt
@@ -278,10 +278,10 @@ add_library(indidriverstatic STATIC ${libindicom_SRCS} ${liblilxml_SRCS} ${indim
 target_link_libraries(indidriverstatic ${LIBUSB_1_LIBRARIES} ${NOVA_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${CFITSIO_LIBRARIES} ${M_LIB} ${ZLIB_LIBRARY})
 endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 
-if (Qt5Network_FOUND)
-qt5_use_modules(indidriver Network)
-qt5_use_modules(indidriverstatic Network)
-endif(Qt5Network_FOUND)
+#if (Qt5Network_FOUND)
+#qt5_use_modules(indidriver Network)
+#qt5_use_modules(indidriverstatic Network)
+#endif(Qt5Network_FOUND)
 
 set_target_properties(indidriver indidriverstatic PROPERTIES VERSION ${CMAKE_INDI_VERSION_STRING} SOVERSION ${INDI_SOVERSION} OUTPUT_NAME indidriver)
 install(TARGETS indidriver LIBRARY DESTINATION ${LIB_DESTINATION})
