--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -4,37 +4,39 @@ Priority: optional
 Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
 Build-Depends: cmake,
                debhelper (>= 9.0.0),
-               extra-cmake-modules (>= 1.3.0~),
-               kdoctools-dev,
-               libkf5config-dev,
-               libkf5guiaddons-dev,
-               libkf5i18n-dev,
-               libkf5jobwidgets-dev,
-               libkf5newstuff-dev,
-               libkf5notifications-dev,
-               libkf5xmlgui-dev,
-               libkf5plotting-dev,
-               libkf5crash-dev,
+               pkg-config,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
+               extra-cmake-modules (>= 1.3.0~),
                qtbase5-dev,
                qtdeclarative5-dev,
                qtmultimedia5-dev,
                libqt5svg5-dev,
                libqt5sql5-sqlite,
-               libeigen3-dev, zlib1g-dev, libcfitsio3-dev (>= 3.040), libglu1-mesa-dev [!armhf], libnova-dev, pkg-config, libindi-dev (>= 1.2.0), indi-bin (>= 1.2.0), wcslib-dev
+               kdoctools-dev,
+               libkf5config-dev,
+               libkf5guiaddons-dev,
+               libkf5i18n-dev,
+               libkf5newstuff-dev,
+               libkf5notifications-dev,
+               libkf5xmlgui-dev,
+               libkf5plotting-dev,
+               libkf5crash-dev,
+               libeigen3-dev,
+               zlib1g-dev,
+               libcfitsio3-dev (>= 3.040),
+               libnova-dev,
+               libindi-dev (>= 1.2.0),
+               indi-bin (>= 1.2.0),
+               wcslib-dev
 Standards-Version: 3.9.3
 Homepage: http://edu.kde.org/
-Vcs-Browser: http://bazaar.launchpad.net/~kubuntu-packagers/kubuntu-packaging/kstars
-Vcs-Bzr: https://code.launchpad.net/~kubuntu-packagers/kubuntu-packaging/kstars
-X-Vcs-Debian-Browser: http://git.debian.org/?p=pkg-kde/kde-sc/kstars.git
-X-Vcs-Debian-Git: git://git.debian.org/pkg-kde/kde-sc/kstars.git
 
 Package: kstars-bleeding
 Architecture: any
 Section: science
 conflicts: kstars
 replaces: kstars
-Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kded5, kinit, libindi1, indi-bin, oxygen-icon-theme, breeze-icon-theme
+Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kded5, kinit, libindi1, indi-bin, breeze-icon-theme
 Description: desktop planetarium for KDE
  KStars is a desktop planetarium for KDE, depicting an accurate graphical
  simulation of the night sky, from any location on Earth, at any date and time.
