Treat HEX files as binary

--- a/.gitattributes
+++ b/.gitattributes
@@ -88,7 +88,6 @@
 3rdparty/indi-dsi/dsi_ccd.cpp -text
 3rdparty/indi-dsi/dsi_ccd.h -text
 3rdparty/indi-dsi/indi_dsi.xml -text
-3rdparty/indi-dsi/meade-deepskyimager.hex -text
 3rdparty/indi-duino/CMakeLists.txt -text
 3rdparty/indi-duino/README -text
 3rdparty/indi-duino/add-on/meteostationWEB/README -text
@@ -877,7 +876,6 @@
 3rdparty/libfishcamp/fishcamp.c -text
 3rdparty/libfishcamp/fishcamp.h -text
 3rdparty/libfishcamp/fishcamp_common.h -text
-3rdparty/libfishcamp/gdr_usb.hex -text
 3rdparty/libfli/.cproject -text
 3rdparty/libfli/.project -text
 3rdparty/libfli/CMakeLists.txt -text
@@ -915,59 +913,6 @@
 3rdparty/libfli/libfli.h -text
 3rdparty/libqhy/85-qhy.rules -text
 3rdparty/libqhy/CMakeLists.txt -text
-3rdparty/libqhy/firmware/IC16200A.HEX -text
-3rdparty/libqhy/firmware/IC16803.HEX -text
-3rdparty/libqhy/firmware/IC8300.HEX -text
-3rdparty/libqhy/firmware/IC90A.HEX -text
-3rdparty/libqhy/firmware/IMG0H.HEX -text
-3rdparty/libqhy/firmware/IMG2P.HEX -text
-3rdparty/libqhy/firmware/IMG2S.HEX -text
-3rdparty/libqhy/firmware/IMG50.HEX -text
-3rdparty/libqhy/firmware/POLEMASTER.HEX -text
-3rdparty/libqhy/firmware/QHY10.HEX -text
-3rdparty/libqhy/firmware/QHY11.HEX -text
-3rdparty/libqhy/firmware/QHY12.HEX -text
-3rdparty/libqhy/firmware/QHY15.HEX -text
-3rdparty/libqhy/firmware/QHY16.HEX -text
-3rdparty/libqhy/firmware/QHY16000.HEX -text
-3rdparty/libqhy/firmware/QHY160002AD.HEX -text
-3rdparty/libqhy/firmware/QHY163.img -text
-3rdparty/libqhy/firmware/QHY174.img -text
-3rdparty/libqhy/firmware/QHY178.img -text
-3rdparty/libqhy/firmware/QHY2.HEX -text
-3rdparty/libqhy/firmware/QHY20.HEX -text
-3rdparty/libqhy/firmware/QHY21.HEX -text
-3rdparty/libqhy/firmware/QHY22.HEX -text
-3rdparty/libqhy/firmware/QHY224.img -text
-3rdparty/libqhy/firmware/QHY23.HEX -text
-3rdparty/libqhy/firmware/QHY27.HEX -text
-3rdparty/libqhy/firmware/QHY28.HEX -text
-3rdparty/libqhy/firmware/QHY29.HEX -text
-3rdparty/libqhy/firmware/QHY290.img -text
-3rdparty/libqhy/firmware/QHY2E.HEX -text
-3rdparty/libqhy/firmware/QHY2PRO.HEX -text
-3rdparty/libqhy/firmware/QHY5.HEX -text
-3rdparty/libqhy/firmware/QHY5II.HEX -text
-3rdparty/libqhy/firmware/QHY5III174.img -text
-3rdparty/libqhy/firmware/QHY5III178.img -text
-3rdparty/libqhy/firmware/QHY5III185.img -text
-3rdparty/libqhy/firmware/QHY5III224.img -text
-3rdparty/libqhy/firmware/QHY5III290.img -text
-3rdparty/libqhy/firmware/QHY5LOADER.HEX -text
-3rdparty/libqhy/firmware/QHY6.HEX -text
-3rdparty/libqhy/firmware/QHY7.HEX -text
-3rdparty/libqhy/firmware/QHY8.HEX -text
-3rdparty/libqhy/firmware/QHY8L.HEX -text
-3rdparty/libqhy/firmware/QHY8M.HEX -text
-3rdparty/libqhy/firmware/QHY8PRO.HEX -text
-3rdparty/libqhy/firmware/QHY9S.HEX -text
-3rdparty/libqhy/firmware/miniCam5.HEX -text
-3rdparty/libqhy/libqhy.dylib -text
-3rdparty/libqhy/libqhy_32.dylib -text
-3rdparty/libqhy/libqhy_64.dylib -text
-3rdparty/libqhy/libqhy_armv6.bin -text
-3rdparty/libqhy/libqhy_x86_32.bin -text
-3rdparty/libqhy/libqhy_x86_64.bin -text
 3rdparty/libqhy/log4z.h -text
 3rdparty/libqhy/qhyccd.h -text
 3rdparty/libqhy/qhyccdcamdef.h -text
@@ -1043,10 +988,6 @@
 3rdparty/sbig/libsbigudrv_arm_v6.bin -text
 3rdparty/sbig/libsbigudrv_arm_v7.bin -text
 3rdparty/sbig/libsbigudrv_arm_v8.bin -text
-3rdparty/sbig/sbigfcam.hex -text
-3rdparty/sbig/sbiglcam.hex -text
-3rdparty/sbig/sbigpcam.hex -text
-3rdparty/sbig/sbigucam.hex -text
 3rdparty/sbig/sbigudrv.h -text
 3rdparty/sbig/stfga.bin -text
 cmake_modules/FindAIOUSB.cmake -text
@@ -1677,3 +1618,8 @@ macosx/INDI[!!-~]Server/indiserver-Info.plist -text
 macosx/INDI[!!-~]Server/libgsl.a -text
 macosx/INDI[!!-~]Server/main.m -text
 macosx/README.txt -text
+*.HEX binary
+*.hex binary
+*.bin binary
+*.img binary
+*.dylib binary
