indi_asi_wheel: rough initial commit - not tested!

--- a/3rdparty/indi-asi/CMakeLists.txt
+++ b/3rdparty/indi-asi/CMakeLists.txt
@@ -28,26 +28,32 @@ include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${CFITSIO_INCLUDE_DIR})
 
 if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv5l")
-    set(ASILIB ${CMAKE_CURRENT_SOURCE_DIR}/armv5/libASICamera2.bin)
+    set(ASICAMLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv5/libASICamera2.bin)
+    set(ASIFWLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv5/libEFWFilter.bin)
     add_definitions(-DLOW_USB_BANDWIDTH)
     message("-- Using armv5 static ASI library")
 elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv6l")
-    set(ASILIB ${CMAKE_CURRENT_SOURCE_DIR}/armv6/libASICamera2.bin)
+    set(ASICAMLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv6/libASICamera2.bin)
+    set(ASIFWLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv6/libEFWFilter.bin)
     add_definitions(-DLOW_USB_BANDWIDTH)
     message("-- Using armv6 static ASI library")
 elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "armv7l")
-    set(ASILIB ${CMAKE_CURRENT_SOURCE_DIR}/armv7/libASICamera2.bin)
+    set(ASICAMLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv7/libASICamera2.bin)
+    set(ASIFWLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv7/libEFWFilter.bin)
     add_definitions(-DLOW_USB_BANDWIDTH)
     message("-- Using armv7 static ASI library")
 elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "aarch64")
-    set(ASILIB ${CMAKE_CURRENT_SOURCE_DIR}/armv8/libASICamera2.bin)
+    set(ASICAMLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv8/libASICamera2.bin)
+    set(ASIFWLIB ${CMAKE_CURRENT_SOURCE_DIR}/armv8/libEFWFilter.bin)
     add_definitions(-DLOW_USB_BANDWIDTH)
     message("-- Using armv8 static ASI library")
 elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "x86_64")
-    set(ASILIB ${CMAKE_CURRENT_SOURCE_DIR}/x64/libASICamera2.bin)
+    set(ASICAMLIB ${CMAKE_CURRENT_SOURCE_DIR}/x64/libASICamera2.bin)
+    set(ASIFWLIB ${CMAKE_CURRENT_SOURCE_DIR}/x64/libEFWFilter.bin)
     message("-- Using 64 bit static ASI library")
 elseif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "i[3-6]86")
-    set(ASILIB ${CMAKE_CURRENT_SOURCE_DIR}/x86/libASICamera2.bin)
+    set(ASICAMLIB ${CMAKE_CURRENT_SOURCE_DIR}/x86/libASICamera2.bin)
+    set(ASIFWLIB ${CMAKE_CURRENT_SOURCE_DIR}/x86/libEFWFilter.bin)
     message("-- Using 32 bit static ASI library")
 endif ()
 
@@ -58,12 +64,25 @@ set(indi_asi_SRCS
 
 add_executable(indi_asi_ccd ${indi_asi_SRCS})
 
-target_link_libraries(indi_asi_ccd ${INDI_DRIVER_LIBRARIES} ${CFITSIO_LIBRARIES} ${ASILIB} ${LIBUSB_1_LIBRARIES} ${ZLIB_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(indi_asi_ccd ${INDI_DRIVER_LIBRARIES} ${CFITSIO_LIBRARIES} ${ASICAMLIB} ${LIBUSB_1_LIBRARIES} ${ZLIB_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+
+
+########### indi_asi_wheel ###########
+add_executable(indi_asi_wheel ${CMAKE_CURRENT_SOURCE_DIR}/asi_wheel.cpp)
+IF (APPLE)
+set(CMAKE_EXE_LINKER_FLAGS "-framework IOKit -framework CoreFoundation")
+target_link_libraries(indi_asi_wheel ${INDI_DRIVER_LIBRARIES} ${LIBUSB_LIBRARIES})
+ELSE()
+target_link_libraries(indi_asi_wheel ${INDI_DRIVER_LIBRARIES} ${ASIFWLIB} ${LIBUSB_1_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+ENDIF()
+
 
 if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "arm*")
 target_link_libraries(indi_asi_ccd rt)
+target_link_libraries(indi_asi_wheel rt)
 endif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "arm*")
 
 install(TARGETS indi_asi_ccd RUNTIME DESTINATION bin)
+install(TARGETS indi_asi_wheel RUNTIME DESTINATION bin)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_asi.xml DESTINATION ${INDI_DATA_DIR})
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/99-asi.rules DESTINATION ${UDEVRULES_INSTALL_DIR})
